Basic English version of Andrew CV

--- a/resume.tex
+++ b/resume.tex
@@ -112,107 +112,70 @@
 % \end{tabular*}
 
 \begin{center}
-    \textbf{\Huge \scshape Jake Ryan} \\ \vspace{1pt}
-    \small 123-456-7890 $|$ \href{mailto:x@x.com}{\underline{jake@su.edu}} $|$ 
-    \href{https://linkedin.com/in/...}{\underline{linkedin.com/in/jake}} $|$
-    \href{https://github.com/...}{\underline{github.com/jake}}
+    \textbf{\Huge \scshape Andrew Ng} \\ \vspace{1pt}
+    \href{mailto:x@x.com}{\underline{andrew@technative.eu}} $|$ 
+    \href{https://linkedin.com/in/...}{\underline{www.linkedin.com/in/andrew-ck-ng/}} $|$
+    \small Nationality: Dutch $|$ 
+    {\small{Drivers License: B}} $|$  {\small{City: Almere}} $|$  
+    {\small{Languages: Dutch (fluent), English (Native) }}
 \end{center}
-
 
 %-----------EDUCATION-----------
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Southwestern University}{Georgetown, TX}
-      {Bachelor of Arts in Computer Science, Minor in Business}{Aug. 2018 -- May 2021}
+      {Terraform Associate (003)}{2024}
+      {HashiCorp}{}
     \resumeSubheading
-      {Blinn College}{Bryan, TX}
-      {Associate's in Liberal Arts}{Aug. 2014 -- May 2018}
+      {AWS Devops Proffesional}{2023}
+      {Amazon Web Services (AWS)}{}
+    \resumeSubheading
+      {AWS Solutions Architect Proffesional}{2023}
+      {Amazon Web Services (AWS)}{}
+    \resumeSubheading
+      {Linux Proffesional Institute (LPI) 1}{2022}
+      {Pearson Vue}{}
+    \resumeSubheading
+      {AWS Solutions Architect associate}{2021}
+      {Amazon Web Services (AWS)}{}
+    \resumeSubheading
+      {AWS re/Start Graduate}{2021}
+      {Amazon Web Services (AWS)}{}
+    \resumeSubheading
+      {Bachelor of Business Administration - BBA}{2014 -- 2019}
+      {Inholland, University of Applied Sciences}{}
+    \resumeSubheading
+      {Bachelor's degree, Information Technology}{2012 -- 2014}
+      {Inholland, University of Applied Sciences}{}
+    \resumeSubheading
+      {Dual Degree: Computer Science Programming/Networking}{2009 -- 2012}
+      {Walters State Community College}{}
   \resumeSubHeadingListEnd
 
+% %-----------Multiple Positions Heading-----------
+% %    \resumeSubSubheading
+% %     {Software Engineer I}{Oct 2014 - Sep 2016}
+% %     \resumeItemListStart
+% %        \resumeItem{Apache Beam}
+% %          {Apache Beam is a unified model for defining both batch and streaming data-parallel processing pipelines}
+% %     \resumeItemListEnd
+% %    \resumeSubHeadingListEnd
+% %-------------------------------------------
 
-%-----------EXPERIENCE-----------
+% -----------EXPERIENCE-----------
 \section{Experience}
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Undergraduate Research Assistant}{June 2020 -- Present}
-      {Texas A\&M University}{College Station, TX}
+      {Cloud/Devops Engineer}{March 2021 -- Present}
+      {AWS, Terraform, Terragrunt, Ansible, Linux, Docker, Python}{TechNative BV}
       \resumeItemListStart
-        \resumeItem{Developed a REST API using FastAPI and PostgreSQL to store data from learning management systems}
-        \resumeItem{Developed a full-stack web application using Flask, React, PostgreSQL and Docker to analyze GitHub data}
-        \resumeItem{Explored ways to visualize GitHub collaboration in a classroom setting}
+        \resumeItem{Close App field-lab events-access: Responsible for upkeep and maintanaince of their Linux based infrastructure managed through Ansible.}{}
+        \resumeItem{Dreamlines.com: Responsible for migration of applications to the AWS service/s equivilant and upkeep of applications hosted in AWS ECS managed through Terraform}
+        \resumeItem{PastBook.com: CI/CD implementation via BitBucket and migration of services to AWS managed in Terraform.}
+        \resumeItem{Managed Services: As Part of the Managed Services team, responsible for maintaining, onboarding and offboarding various client AWS infrastructure}
+        \resumeItem{Well Architected Team: As Part of the Well Architected Team, I was responsible for conducting ± 6 Well-architected Framework reviews. Whereby I vist potential prospects and review their AWS infrastructure against the AWS well-architected Framework.}
       \resumeItemListEnd
-      
-% -----------Multiple Positions Heading-----------
-%    \resumeSubSubheading
-%     {Software Engineer I}{Oct 2014 - Sep 2016}
-%     \resumeItemListStart
-%        \resumeItem{Apache Beam}
-%          {Apache Beam is a unified model for defining both batch and streaming data-parallel processing pipelines}
-%     \resumeItemListEnd
-%    \resumeSubHeadingListEnd
-%-------------------------------------------
-
-    \resumeSubheading
-      {Information Technology Support Specialist}{Sep. 2018 -- Present}
-      {Southwestern University}{Georgetown, TX}
-      \resumeItemListStart
-        \resumeItem{Communicate with managers to set up campus computers used on campus}
-        \resumeItem{Assess and troubleshoot computer problems brought by students, faculty and staff}
-        \resumeItem{Maintain upkeep of computers, classroom equipment, and 200 printers across campus}
-    \resumeItemListEnd
-
-    \resumeSubheading
-      {Artificial Intelligence Research Assistant}{May 2019 -- July 2019}
-      {Southwestern University}{Georgetown, TX}
-      \resumeItemListStart
-        \resumeItem{Explored methods to generate video game dungeons based off of \emph{The Legend of Zelda}}
-        \resumeItem{Developed a game in Java to test the generated dungeons}
-        \resumeItem{Contributed 50K+ lines of code to an established codebase via Git}
-        \resumeItem{Conducted  a human subject study to determine which video game dungeon generation technique is enjoyable}
-        \resumeItem{Wrote an 8-page paper and gave multiple presentations on-campus}
-        \resumeItem{Presented virtually to the World Conference on Computational Intelligence}
-      \resumeItemListEnd
-
   \resumeSubHeadingListEnd
-
-
-%-----------PROJECTS-----------
-\section{Projects}
-    \resumeSubHeadingListStart
-      \resumeProjectHeading
-          {\textbf{Gitlytics} $|$ \emph{Python, Flask, React, PostgreSQL, Docker}}{June 2020 -- Present}
-          \resumeItemListStart
-            \resumeItem{Developed a full-stack web application using with Flask serving a REST API with React as the frontend}
-            \resumeItem{Implemented GitHub OAuth to get data from user’s repositories}
-            \resumeItem{Visualized GitHub data to show collaboration}
-            \resumeItem{Used Celery and Redis for asynchronous tasks}
-          \resumeItemListEnd
-      \resumeProjectHeading
-          {\textbf{Simple Paintball} $|$ \emph{Spigot API, Java, Maven, TravisCI, Git}}{May 2018 -- May 2020}
-          \resumeItemListStart
-            \resumeItem{Developed a Minecraft server plugin to entertain kids during free time for a previous job}
-            \resumeItem{Published plugin to websites gaining 2K+ downloads and an average 4.5/5-star review}
-            \resumeItem{Implemented continuous delivery using TravisCI to build the plugin upon new a release}
-            \resumeItem{Collaborated with Minecraft server administrators to suggest features and get feedback about the plugin}
-          \resumeItemListEnd
-    \resumeSubHeadingListEnd
-
-
-
-%
-%-----------PROGRAMMING SKILLS-----------
-\section{Technical Skills}
- \begin{itemize}[leftmargin=0.15in, label={}]
-    \small{\item{
-     \textbf{Languages}{: Java, Python, C/C++, SQL (Postgres), JavaScript, HTML/CSS, R} \\
-     \textbf{Frameworks}{: React, Node.js, Flask, JUnit, WordPress, Material-UI, FastAPI} \\
-     \textbf{Developer Tools}{: Git, Docker, TravisCI, Google Cloud Platform, VS Code, Visual Studio, PyCharm, IntelliJ, Eclipse} \\
-     \textbf{Libraries}{: pandas, NumPy, Matplotlib}
-    }}
- \end{itemize}
-
-
 %-------------------------------------------
 \end{document}
