--- a/resume copy.tex
+++ b/resume copy.tex
@@ -125,7 +125,6 @@
 {\small{Dedicated to leveraging my skills to support organizations in identifying and deploying micro innovations aimed at enhancing the end-user experience. Additionally, I am enthusiastic about continual learning and expanding my expertise to cultivate new insights.}}
 
 %-----------EDUCATION-----------
-\vspace{0.5cm}
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
@@ -168,18 +167,18 @@
 % %-------------------------------------------
 
 % -----------EXPERIENCE-----------
-\vspace{0.5cm}
 \section{Experience}
   \resumeSubHeadingListStart
+
     \resumeSubheading
       {Cloud/Devops Engineer}{March 2021 -- Present}
       {AWS, Terraform, Terragrunt, Ansible, Linux, Docker, Python}{TechNative BV}
       \resumeItemListStart
-        \resumeItem{\textbf{Close App field-lab events-access:} Responsible for upkeep and maintanaince of their Linux based infrastructure managed through Ansible.}{}
-        \resumeItem{\textbf{Dreamlines.com:} Responsible for migration of various workloads hosted on EC2 to the AWS native service/s equivalent and upkeep of applications managed through Terraform.}
-        \resumeItem{\textbf{PastBook.com:} Blue/green CI/CD implementation on an account level using BitBucket Pipelines, migration of EC2 hosted services to AWS managed services such as ECS/Route53/DynamoDb using tools such as Terraform, bash and Python to host their applications.}
-        \resumeItem{\textbf{Managed Services:} As Part of the team, I was owner of the serverless Observability stack, development of a landing-zone setup in Terraform based on AWS best practices and responsible for maintaining, hardening, onboarding and offboarding clients.}
-        \resumeItem{\textbf{Well Architected Team:} As Part of the Well Architected Team, I was responsible for conducting ± 6 Well-architected Framework reviews per year. Whereby I visit potential prospects and review their AWS infrastructure against the AWS well-architected Framework and developing advisory reports and presentations creating new business opportunities.}
+        \resumeItem{Close App field-lab events-access: Responsible for upkeep and maintanaince of their Linux based infrastructure managed through Ansible.}{}
+        \resumeItem{Dreamlines.com: Responsible for migration of various workloads hosted on EC2 to the AWS native service/s equivalent and upkeep of applications managed through Terraform.}
+        \resumeItem{PastBook.com: Blue/green CI/CD implementation on an account level using BitBucket Pipelines, migration of EC2 hosted services to AWS managed services such as ECS/Route53/DynamoDb using tools such as Terraform, bash and Python to host their applications.}
+        \resumeItem{Managed Services: As Part of the team, I was owner of the serverless Observability stack, development of a landing-zone setup in Terraform based on AWS best practices and responsible for maintaining, hardening, onboarding and offboarding clients.}
+        \resumeItem{Well Architected Team: As Part of the Well Architected Team, I was responsible for conducting ± 6 Well-architected Framework reviews per year. Whereby I visit potential prospects and review their AWS infrastructure against the AWS well-architected Framework and developing advisory reports and presentations creating new business opportunities.}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
 %-------------------------------------------
