Updated resume august 2024, created a naming convention

--- a/resume.tex
+++ b/resume.tex
@@ -113,7 +113,7 @@
 
 \begin{center}
     \textbf{\Huge \scshape Andrew Ng} \\ \vspace{1pt}
-    \href{mailto:x@x.com}{\underline{andrew@technative.eu}} $|$ 
+    \href{mailto:x@x.com}{\underline{ck.andrew.ng@gmail.com}} $|$ 
     \href{https://linkedin.com/in/...}{\underline{www.linkedin.com/in/andrew-ck-ng/}} $|$
     \small Nationality: Dutch $|$ 
     {\small{Drivers License: B}} $|$  {\small{City: Almere}} $|$  
@@ -126,7 +126,7 @@
 
 %-----------EDUCATION-----------
 \vspace{0.5cm}
-\section{Education}
+\section{Education \& Certifications}
   \resumeSubHeadingListStart
     \resumeSubheading
       {Terraform Associate (003)}{2024}
@@ -172,14 +172,14 @@
 \section{Experience}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Cloud/Devops Engineer}{March 2021 -- Present}
+      {Cloud Engineer}{March 2021 -- Present}
       {AWS, Terraform, Terragrunt, Ansible, Linux, Docker, Python}{TechNative BV}
       \resumeItemListStart
-        \resumeItem{\textbf{Close App field-lab events-access:} Responsible for upkeep and maintanaince of their Linux based infrastructure managed through Ansible.}{}
+        \resumeItem{\textbf{Close App field-lab events-access:} Responsible for upkeep and maintanaince of their Linux based infrastructure managed primarly through Ansible.}{}
         \resumeItem{\textbf{Dreamlines.com:} Responsible for migration of various workloads hosted on EC2 to the AWS native service/s equivalent and upkeep of applications managed through Terraform.}
         \resumeItem{\textbf{PastBook.com:} Blue/green CI/CD implementation on an account level using BitBucket Pipelines, migration of EC2 hosted services to AWS managed services such as ECS/Route53/DynamoDb using tools such as Terraform, bash and Python to host their applications.}
-        \resumeItem{\textbf{Managed Services:} As Part of the team, I was owner of the serverless Observability stack, development of a landing-zone setup in Terraform based on AWS best practices and responsible for maintaining, hardening, onboarding and offboarding clients.}
-        \resumeItem{\textbf{Well Architected Team:} As Part of the Well Architected Team, I was responsible for conducting ± 6 Well-architected Framework reviews per year. Whereby I visit potential prospects and review their AWS infrastructure against the AWS well-architected Framework and developing advisory reports and presentations creating new business opportunities.}
+        \resumeItem{\textbf{Managed Services Team:} As Part of the team, I was owner of the serverless Observability stack, development of a landing-zone setup in Terraform based on AWS best practices and responsible for maintaining, hardening, onboarding and offboarding clients.}
+        \resumeItem{\textbf{Well-Architected Team:} As Part of the Well-Architected Team, I was responsible for conducting $\pm$ 6 Well-architected Framework reviews per year. Whereby I visit potential prospects and review their AWS infrastructure against the AWS well-architected Framework and developing advisory reports and presentations creating new business opportunities.}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
 %-------------------------------------------
