January 2025 resume update

--- a/resume.tex
+++ b/resume.tex
@@ -126,35 +126,36 @@
 
 %-----------EDUCATION-----------
 \vspace{0.5cm}
-\section{Education \& Certifications}
+%-----------EDUCATION-----------
+\section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Terraform Associate (003)}{2024}
-      {HashiCorp}{}
+      {Terraform Associate (003) - HashiCorp}{2024}
+      {Validates proficiency in utilizing Terraform to efficiently manage and provision infrastructure as code.}{}
     \resumeSubheading
-      {AWS Devops Proffesional}{2023}
-      {Amazon Web Services (AWS)}{}
+      {AWS Devops Professional - Amazon Web Services (AWS)}{2023}
+      {Demonstrates mastery in implementing continuous integration, continuous delivery, and automation practices within AWS cloud environments.}{}
     \resumeSubheading
-      {AWS Solutions Architect Proffesional}{2023}
-      {Amazon Web Services (AWS)}{}
+      {AWS Solutions Architect Professional - Amazon Web Services (AWS)}{2023}
+      {Showcases expertise in designing and deploying scalable, secure, and cost-effective cloud solutions on the AWS platform.}{}
     \resumeSubheading
-      {Linux Proffesional Institute (LPI) 1}{2022}
-      {Pearson Vue}{}
+      {Linux Professional institute (LPI) 1 - Pearson Vue}{2022}
+      {Validates foundational knowledge and skills in Linux system administration, including installation, maintenance, and troubleshooting.}{}
     \resumeSubheading
-      {AWS Solutions Architect associate}{2021}
-      {Amazon Web Services (AWS)}{}
+      {AWS Solutions Architect associate - Amazon Web Services (AWS)}{2021}
+      {Demonstrates proficiency in designing distributed systems and architecting scalable, secure, and reliable applications on the AWS platform.}{}
     \resumeSubheading
-      {AWS re/Start Graduate}{2021}
-      {Amazon Web Services (AWS)}{}
+      {AWS re/Start Graduate - Amazon Web Services (AWS)}{2021}
+      {Provides individuals with no prior tech experience a pathway to jumpstart their careers in cloud computing through hands-on training, mentorship, and job placement assistance.}{}
     \resumeSubheading
-      {Bachelor of Business Administration - BBA}{2014 -- 2019}
-      {Inholland, University of Applied Sciences}{}
+      {Bachelor of Business Administration (BBA) - IBIS - Inholland HBO}{2014 -- 2019}
+      {Emphasizes design thinking, innovation, and conceptualization strategies, empowering graduates to drive creativity, problem-solving, and strategic decision-making in dynamic business environments}{}
     \resumeSubheading
-      {Bachelor's degree, Information Technology}{2012 -- 2014}
-      {Inholland, University of Applied Sciences}{}
+      {Bachelor's degree, Information Technology (Incomplete) - Inholland HBO}{2012 -- 2014}
+      {Offers comprehensive knowledge and practical skills in software development, algorithms, data structures, and computer systems, preparing graduates for a wide range of opportunities in the technology industry.}{}
     \resumeSubheading
-      {Computer Science Programming/Networking}{ 2009 -- 2012}
-      {Walters State Community College}{}
+      {Dual Degree: Computer Science Programming/Networking - Walters State Community College }{2009 -- 2012}
+      {Associate level degree, integrating comprehensive programming and networking skills, provides a strong foundation for diverse career paths in technology.}{}
   \resumeSubHeadingListEnd
 
 % %-----------Multiple Positions Heading-----------
@@ -178,9 +179,23 @@
         \resumeItem{\textbf{Close App field-lab events-access:} Responsible for upkeep and maintanaince of their Linux based infrastructure managed primarly through Ansible.}{}
         \resumeItem{\textbf{Dreamlines.com:} Responsible for migration of various workloads hosted on EC2 to the AWS native service/s equivalent and upkeep of applications managed through Terraform.}
         \resumeItem{\textbf{PastBook.com:} Blue/green CI/CD implementation on an account level using BitBucket Pipelines, migration of EC2 hosted services to AWS managed services such as ECS/Route53/DynamoDb using tools such as Terraform, bash and Python to host their applications.}
-        \resumeItem{\textbf{Managed Services Team:} As Part of the team, I was owner of the serverless Observability stack, development of a landing-zone setup in Terraform based on AWS best practices and responsible for maintaining, hardening, onboarding and offboarding clients.}
+        \resumeItem{\textbf{TechNative Managed Services}: As Part of the team, I was owner of the serverless Observability stack, helped create a landing-zone setup in Terraform based on AWS best practices and responsible for maintaining, onboarding and offboarding client AWS infrastructures.}
         \resumeItem{\textbf{Well-Architected Team:} As Part of the Well-Architected Team, I was responsible for conducting $\pm$ 6 Well-architected Framework reviews per year. Whereby I visit potential prospects and review their AWS infrastructure against the AWS well-architected Framework and developing advisory reports and presentations creating new business opportunities.}
       \resumeItemListEnd
+  \resumeSubHeadingListEnd
+%-------------------------------------------
+
+% -----------Additional Activities-----------
+%-----------EDUCATION-----------
+\vspace{0.5cm}
+\section{Additional Activities}
+  \resumeSubHeadingListStart
+    \resumeSubheading
+      {Social Engagement through TechGrounds}{}
+      {Engaged in workshops and presentations to introduce IT concepts to aspiring engineers, fostering interest and skill development in future professionals.}{}
+    \resumeSubheading
+      {Mentorship}{}
+      {Helping mentees navigate the challenges of public cloud concepts and build confidence.}{}
   \resumeSubHeadingListEnd
 %-------------------------------------------
 \end{document}
