--- a/resume_personal.tex
+++ b/resume_personal.tex
@@ -78,7 +78,7 @@
 
 \newcommand{\resumeSubheading}[4]{
   \vspace{-2pt}\item
-    \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}}p{0.9\textwidth}p{0.4\textwidth}@{}}
+    \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}}p{0.85\textwidth} p{0.20\textwidth}@{}}
       \textbf{#1} & #2 \\
       \textit{\small#3} & \textit{\small #4} \\
     \end{tabular*}\vspace{-7pt}
@@ -86,7 +86,7 @@
 
 \newcommand{\resumeSubSubheading}[2]{
     \item
-    \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
+    \begin{tabular*}p{0.97\textwidth}{l@{\extracolsep{\fill}}r}
       \textit{\small#1} & \textit{\small #2} \\
     \end{tabular*}\vspace{-7pt}
 }
@@ -128,6 +128,11 @@
     {\small{Languages: Dutch (fluent), English (Native) }}
 \end{center}
 
+%-----------Profile-----------
+\section{Profile}
+{\small{Dedicated to leveraging my skills to support organizations in identifying and deploying micro innovations aimed at enhancing the end-user experience. Additionally, I am enthusiastic about continual learning and expanding my expertise to cultivate new insights.}}
+
+
 %-----------EDUCATION-----------
 \section{Education}
   \resumeSubHeadingListStart
@@ -144,9 +149,6 @@
       {Linux Professional institute (LPI) 1 - Pearson Vue}{2022}
       {Validates foundational knowledge and skills in Linux system administration, including installation, maintenance, and troubleshooting.}{}
     \resumeSubheading
-      {AWS Solutions Architect associate - Amazon Web Services (AWS)}{2021}
-      {Demonstrates proficiency in designing distributed systems and architecting scalable, secure, and reliable applications on the AWS platform.}{}
-    \resumeSubheading
       {AWS re/Start Graduate - Amazon Web Services (AWS)}{2021}
       {Provides individuals with no prior tech experience a pathway to jumpstart their careers in cloud computing through hands-on training, mentorship, and job placement assistance.}{}
     \resumeSubheading
@@ -156,7 +158,7 @@
       {Bachelor's degree, Information Technology (Incomplete) - Inholland HBO}{2012 -- 2014}
       {Offers comprehensive knowledge and practical skills in software development, algorithms, data structures, and computer systems, preparing graduates for a wide range of opportunities in the technology industry.}{}
     \resumeSubheading
-      {Dual Degree: Computer Science Programming/Networking - Walters State Community College }{2009 -- 2012}
+      {Computer Science Programming/Networking - Walters State Comm. College}{2009 -- 2012}
       {Associate level degree, integrating comprehensive programming and networking skills, provides a strong foundation for diverse career paths in technology.}{}
   \resumeSubHeadingListEnd
 
@@ -171,11 +173,12 @@
 % %-------------------------------------------
 
 % -----------EXPERIENCE-----------
+\vspace{0.5cm}
 \section{Experience}
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Cloud/Devops Engineer}{March 2021 -- Present}
+      {Cloud Engineer}{2021 -- Present}
       {AWS, Terraform, Ansible, Linux, Docker, Python, CI/CD}{TechNative BV}
       \resumeItemListStart
         \resumeItem{\textbf{Dreamlines GMBH}: Responsible for migration of various workloads hosted on EC2 to the AWS native service/s equivalent and upkeep of applications managed through Terraform.}
@@ -184,6 +187,20 @@
         \resumeItem{\textbf{TechNative Managed Services}: As Part of the team, I was owner of the serverless Observability stack, helped create a landing-zone setup in Terraform based on AWS best practices and responsible for maintaining, onboarding and offboarding client AWS infrastructures.}
         \resumeItem{\textbf{Well-Architected Reviews}: As Part of the Well Architected Team, I was responsible for conducting an average of 3 Well-architected reviews a year. Whereby I visit potential prospects and review their AWS infrastructure against the AWS well-architected Framework by using tools such as Prowler, CloudCraft and SteamPipe.}
       \resumeItemListEnd
+  \resumeSubHeadingListEnd
+%-------------------------------------------
+
+% -----------Additional Activities-----------
+%-----------EDUCATION-----------
+\vspace{0.5cm}
+\section{Additional Activities}
+  \resumeSubHeadingListStart
+    \resumeSubheading
+      {Social Engagement through TechGrounds}{}
+      {Engaged in workshops and presentations to introduce IT concepts to aspiring engineers, fostering interest and skill development in future professionals.}{}
+    \resumeSubheading
+      {Mentorship}{}
+      {Helping mentees navigate the challenges of public cloud concepts and build confidence.}{}
   \resumeSubHeadingListEnd
 %-------------------------------------------
 \end{document}
