fix sub sub headings, updated profile

--- a/resume_personal.tex
+++ b/resume_personal.tex
@@ -77,12 +77,12 @@
     \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}}p{0.85\textwidth} p{0.20\textwidth}@{}}
       \textbf{#1} & #2 \\
       \textit{\small#3} & \textit{\small #4} \\
-    \end{tabular*}\vspace{-7pt}
+    \end{tabular*}\vspace{-3pt}
 }
 
 \newcommand{\resumeSubSubheading}[2]{
     \item
-    \begin{tabular*}p{0.97\textwidth}{l@{\extracolsep{\fill}}r}
+    \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
       \textit{\small#1} & \textit{\small #2} \\
     \end{tabular*}\vspace{-4pt}
 }
@@ -128,7 +128,7 @@
 
 %-----------Profile-----------
 \section{Profile}
-{\small{Dedicated to leveraging my skills to support organizations in identifying and deploying micro innovations aimed at enhancing the end-user experience. Additionally, I am enthusiastic about continual learning and expanding my expertise to cultivate new insights.}}
+{\small{Passionate about driving micro-innovations to enhance end-user experiences by optimizing cloud infrastructure, automation, and DevOps workflows. Committed to continuous learning, staying ahead of emerging technologies, and refining best practices in cloud engineering.}}
 
 % -----------EXPERIENCE-----------
 \vspace{0.3cm}
@@ -136,19 +136,24 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {TechNative BV}{2021 -- Present}
-      {Senior Cloud Engineer}{2023 -- Present}
-        \resumeItemListStart
+      {}{}
+      \vspace{-10pt}
+      \resumeSubSubheading
+        {Senior Cloud Engineer}{2024 -- Present}
+      \resumeItemListStart
           \resumeItem{Lead cloud migrations, infrastructure automation, and AWS best practice implementations.}
           \resumeItem{Owned the serverless observability stack and contributed to landing-zone setups in Terraform.}
           \resumeItem{Conducted AWS Well-Architected Reviews, assessing infrastructure security, reliability, and cost efficiency.}
-        \resumeItemListEnd
-      {Cloud Engineer}{2022 - 2023}
+      \resumeItemListEnd
+      \resumeSubSubheading
+        {Cloud Engineer}{2022 - 2024}
       \resumeItemListStart
         \resumeItem{Migrated EC2-hosted workloads to AWS native services (ECS, Route 53, DynamoDB).}
         \resumeItem{Implemented blue/green CI/CD pipelines with BitBucket for seamless deployments.}
         \resumeItem{Assisted in AWS cloud infrastructure maintenance and troubleshooting.}
       \resumeItemListEnd
-      {Junior Cloud Engineer}{2021 - 2022}
+      \resumeSubSubheading
+        {Junior Cloud Engineer}{2021 - 2022}
       \resumeItemListStart
         \resumeItem{Maintained Linux-based infrastructure using Ansible for automation and configuration management.}
         \resumeItem{Supported the migration of workloads using Terraform and Ansible.}
